// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FExpansionPanel Visuals ExpandFalse 1`] = `
<ul
  class="v-expansion-panel v-expansion-panel--focusable theme--light"
>
  <li
    class="v-expansion-panel__container"
    tabindex="0"
  >
    <div
      class="v-expansion-panel__header"
    >
      <h3>
        My Drive
      </h3>
      <div
        class="v-expansion-panel__header__icon"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div
      class="v-expansion-panel__body"
      style="display: none;"
    >
       
      <hr
        class="v-divider theme--light"
      />
       
      <div
        class="v-card v-sheet theme--light"
      >
        <div
          class="v-card__text"
        >
          <div
            class="v-list v-list--two-line theme--light"
            role="list"
          >
            <div
              role="listitem"
            >
              <div
                class="v-list__tile v-list__tile--avatar theme--light"
              >
                <div
                  class="v-list__tile__avatar"
                >
                  <div
                    class="v-avatar"
                    style="height: 40px; width: 40px;"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light grey lighten-1 white--text"
                    >
                      folder
                    </i>
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__content"
                >
                  <div
                    class="v-list__tile__title"
                  >
                    Photos
                  </div>
                   
                  <div
                    class="v-list__tile__sub-title"
                  >
                    Jan 9, 2014
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__action"
                >
                  <button
                    class="v-btn v-btn--icon theme--light"
                    type="button"
                  >
                    <div
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light grey--text text--lighten-1"
                      >
                        info
                      </i>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              role="listitem"
            >
              <div
                class="v-list__tile v-list__tile--avatar theme--light"
              >
                <div
                  class="v-list__tile__avatar"
                >
                  <div
                    class="v-avatar"
                    style="height: 40px; width: 40px;"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light grey lighten-1 white--text"
                    >
                      folder
                    </i>
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__content"
                >
                  <div
                    class="v-list__tile__title"
                  >
                    Recipes
                  </div>
                   
                  <div
                    class="v-list__tile__sub-title"
                  >
                    Jan 17, 2014
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__action"
                >
                  <button
                    class="v-btn v-btn--icon theme--light"
                    type="button"
                  >
                    <div
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light grey--text text--lighten-1"
                      >
                        info
                      </i>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              role="listitem"
            >
              <div
                class="v-list__tile v-list__tile--avatar theme--light"
              >
                <div
                  class="v-list__tile__avatar"
                >
                  <div
                    class="v-avatar"
                    style="height: 40px; width: 40px;"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light grey lighten-1 white--text"
                    >
                      folder
                    </i>
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__content"
                >
                  <div
                    class="v-list__tile__title"
                  >
                    Work
                  </div>
                   
                  <div
                    class="v-list__tile__sub-title"
                  >
                    Jan 28, 2014
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__action"
                >
                  <button
                    class="v-btn v-btn--icon theme--light"
                    type="button"
                  >
                    <div
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light grey--text text--lighten-1"
                      >
                        info
                      </i>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="v-card__actions"
        >
          <button
            class="v-btn v-btn--flat theme--light orange--text"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Share
        
            </div>
          </button>
           
          <button
            class="v-btn v-btn--flat theme--light orange--text"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Explore
        
            </div>
          </button>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`FExpansionPanel Visuals NoTitle 1`] = `
<ul
  class="v-expansion-panel v-expansion-panel--focusable theme--light"
>
  <li
    class="v-expansion-panel__container"
    tabindex="0"
  >
    <div
      class="v-expansion-panel__header"
    >
      <h3>
        
      </h3>
      <div
        class="v-expansion-panel__header__icon"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div
      class="v-expansion-panel__body"
      style="display: none;"
    >
       
      <hr
        class="v-divider theme--light"
      />
       
      <div
        class="v-card v-sheet theme--light"
      >
        <div
          class="v-card__text"
        >
          <div
            class="v-list v-list--two-line theme--light"
            role="list"
          >
            <div
              role="listitem"
            >
              <div
                class="v-list__tile v-list__tile--avatar theme--light"
              >
                <div
                  class="v-list__tile__avatar"
                >
                  <div
                    class="v-avatar"
                    style="height: 40px; width: 40px;"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light grey lighten-1 white--text"
                    >
                      folder
                    </i>
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__content"
                >
                  <div
                    class="v-list__tile__title"
                  >
                    Photos
                  </div>
                   
                  <div
                    class="v-list__tile__sub-title"
                  >
                    Jan 9, 2014
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__action"
                >
                  <button
                    class="v-btn v-btn--icon theme--light"
                    type="button"
                  >
                    <div
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light grey--text text--lighten-1"
                      >
                        info
                      </i>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              role="listitem"
            >
              <div
                class="v-list__tile v-list__tile--avatar theme--light"
              >
                <div
                  class="v-list__tile__avatar"
                >
                  <div
                    class="v-avatar"
                    style="height: 40px; width: 40px;"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light grey lighten-1 white--text"
                    >
                      folder
                    </i>
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__content"
                >
                  <div
                    class="v-list__tile__title"
                  >
                    Recipes
                  </div>
                   
                  <div
                    class="v-list__tile__sub-title"
                  >
                    Jan 17, 2014
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__action"
                >
                  <button
                    class="v-btn v-btn--icon theme--light"
                    type="button"
                  >
                    <div
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light grey--text text--lighten-1"
                      >
                        info
                      </i>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              role="listitem"
            >
              <div
                class="v-list__tile v-list__tile--avatar theme--light"
              >
                <div
                  class="v-list__tile__avatar"
                >
                  <div
                    class="v-avatar"
                    style="height: 40px; width: 40px;"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light grey lighten-1 white--text"
                    >
                      folder
                    </i>
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__content"
                >
                  <div
                    class="v-list__tile__title"
                  >
                    Work
                  </div>
                   
                  <div
                    class="v-list__tile__sub-title"
                  >
                    Jan 28, 2014
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__action"
                >
                  <button
                    class="v-btn v-btn--icon theme--light"
                    type="button"
                  >
                    <div
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light grey--text text--lighten-1"
                      >
                        info
                      </i>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="v-card__actions"
        >
          <button
            class="v-btn v-btn--flat theme--light orange--text"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Share
        
            </div>
          </button>
           
          <button
            class="v-btn v-btn--flat theme--light orange--text"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Explore
        
            </div>
          </button>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`FExpansionPanel Visuals WithTitleAndContent 1`] = `
<ul
  class="v-expansion-panel v-expansion-panel--focusable theme--light"
>
  <li
    class="v-expansion-panel__container"
    tabindex="0"
  >
    <div
      class="v-expansion-panel__header"
    >
      <h3>
        My Drive
      </h3>
      <div
        class="v-expansion-panel__header__icon"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div
      class="v-expansion-panel__body"
      style="display: none;"
    >
       
      <hr
        class="v-divider theme--light"
      />
       
      <div
        class="v-card v-sheet theme--light"
      >
        <div
          class="v-card__text"
        >
          <div
            class="v-list v-list--two-line theme--light"
            role="list"
          >
            <div
              role="listitem"
            >
              <div
                class="v-list__tile v-list__tile--avatar theme--light"
              >
                <div
                  class="v-list__tile__avatar"
                >
                  <div
                    class="v-avatar"
                    style="height: 40px; width: 40px;"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light grey lighten-1 white--text"
                    >
                      folder
                    </i>
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__content"
                >
                  <div
                    class="v-list__tile__title"
                  >
                    Photos
                  </div>
                   
                  <div
                    class="v-list__tile__sub-title"
                  >
                    Jan 9, 2014
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__action"
                >
                  <button
                    class="v-btn v-btn--icon theme--light"
                    type="button"
                  >
                    <div
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light grey--text text--lighten-1"
                      >
                        info
                      </i>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              role="listitem"
            >
              <div
                class="v-list__tile v-list__tile--avatar theme--light"
              >
                <div
                  class="v-list__tile__avatar"
                >
                  <div
                    class="v-avatar"
                    style="height: 40px; width: 40px;"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light grey lighten-1 white--text"
                    >
                      folder
                    </i>
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__content"
                >
                  <div
                    class="v-list__tile__title"
                  >
                    Recipes
                  </div>
                   
                  <div
                    class="v-list__tile__sub-title"
                  >
                    Jan 17, 2014
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__action"
                >
                  <button
                    class="v-btn v-btn--icon theme--light"
                    type="button"
                  >
                    <div
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light grey--text text--lighten-1"
                      >
                        info
                      </i>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              role="listitem"
            >
              <div
                class="v-list__tile v-list__tile--avatar theme--light"
              >
                <div
                  class="v-list__tile__avatar"
                >
                  <div
                    class="v-avatar"
                    style="height: 40px; width: 40px;"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light grey lighten-1 white--text"
                    >
                      folder
                    </i>
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__content"
                >
                  <div
                    class="v-list__tile__title"
                  >
                    Work
                  </div>
                   
                  <div
                    class="v-list__tile__sub-title"
                  >
                    Jan 28, 2014
                  </div>
                </div>
                 
                <div
                  class="v-list__tile__action"
                >
                  <button
                    class="v-btn v-btn--icon theme--light"
                    type="button"
                  >
                    <div
                      class="v-btn__content"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light grey--text text--lighten-1"
                      >
                        info
                      </i>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="v-card__actions"
        >
          <button
            class="v-btn v-btn--flat theme--light orange--text"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Share
        
            </div>
          </button>
           
          <button
            class="v-btn v-btn--flat theme--light orange--text"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
          Explore
        
            </div>
          </button>
        </div>
      </div>
    </div>
  </li>
</ul>
`;
